syntax = "proto3";

package mpb;

option go_package = "./mpb";

import "common.proto";

message CReqGetGoodsOrdersOnSell {
    uint32 item_id = 1;
    uint32 page_num = 2;
}

message CResGetGoodsOrdersOnSell {
    uint32 item_id = 1;
    uint32 page_num = 2;
    repeated GoodsOrder orders = 3;
    uint32 order_cnt = 4;
}

message CResGetMyGoodsOrdersOnSell {
    repeated GoodsOrder orders = 1;
}

message CReqPublishGoodsOrder {
    uint32 item_id = 1;
    uint64 num = 2;
    uint64 price = 3;
}

message CReqPurchaseGoodsOrder {
    uint64 order_uuid = 1;
}

message CResPurchaseGoodsOrder {
    Item goods = 1;
    uint64 mana_cost = 2;
    uint64 mana_left = 3;
}

message CReqTakeOffGoodsOrder {
    uint64 order_uuid = 1;
}

message CResTakeOffGoodsOrder {
    Item add_item = 1;
    Item update_item = 2;
}